--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body{
   background-color: #f8f8f8f8;
   color: #333;
   scroll-behavior: smooth;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
   /* cursor: none; */
 }
 .img-border {
