--- a/style.css
+++ b/style.css
@@ -268,6 +268,9 @@ hr.light {
   margin-top: .8rem;
   margin-bottom: 1rem;
 }
+image {
+  background-repeat: no-repeat;
+}
 footer a {
   color: #d5d5d5;
 }
